--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
       Personal site of Aditya Srivastava
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  aditya4131
+github_username:  [Aditya](aditya4131)
 linkedin_username: aditya-srivastava-912435223
 
 # Build settings
