--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  aditya4131
-linkedin_username: aditya-srivastava-912435223
+linkedin_username: Adi-Sri
 
 # Build settings
 theme: minima
