--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Aditya Srivastava
+# title: Aditya Srivastava
 email: asriva8@lsu.edu
-# description: >- # this means to ignore newlines until "baseurl:"
-#       Personal site of Aditya Srivastava
+description: >- # this means to ignore newlines until "baseurl:"
+      Personal site of Aditya Srivastava
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  aditya4131
