--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-# title: Aditya Srivastava
+title: Aditya Srivastava
 email: asriva8@lsu.edu
 description: >- # this means to ignore newlines until "baseurl:"
       Personal site of Aditya Srivastava
